Please view this file on the master branch, on stable branches it's out of date.

v 0.0.1 (unreleased)
* Move generation of SECRET_KEY_TOKEN to an initializer (jvanbaarsen)
* Update to Dokku 0.5.5 (jvanbaarsen)
* Brand new design (jvanbaarsen)
* Scope app name uniqueness to server and not entire IC (jvanbaarsen)
* Make sure service containers are destroyed when removing an app Fixes: #80 (jvanbaarsen)