@@ -7,3 +7,4 @@ production:
 :queues:
   - default
   - mailers
+  - health_checks
